--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prettier": "prettier --write ."
+    "prettier": "prettier --write .",
+    "docker:up": "docker compose up --build"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
