--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "prettier": "prettier --write .",
-    "docker:up": "docker compose up --build"
+    "docker:up": "docker compose up --build",
+    "prisma:seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
+    "@prisma/client": "^6.15.0",
+    "@prisma/extension-accelerate": "^2.0.2",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,7 +34,9 @@
     "eslint-config-next": "15.4.6",
     "eslint-config-prettier": "^10.1.8",
     "prettier": "^3.6.2",
+    "prisma": "^6.15.0",
     "tailwindcss": "^4.1.12",
+    "tsx": "^4.20.5",
     "tw-animate-css": "^1.3.7",
     "typescript": "^5"
   }
