--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 /src/generated/prisma
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
